badly working proxy enabled